Fix handling of zip files with file without extension, fix word wrapping in series title, fix title in Discord title

--- a/static_global/css/index.css
+++ b/static_global/css/index.css
@@ -1101,6 +1101,7 @@ main a {
 	color: white;
 	font-size: 2em;
 	margin-bottom: 0.5em;
+	word-break: break-word;
 }
 .page-series article h2 {
 	font-size: 0.9em;
